Multiset/force-app/main/default/objects/Acoes__c/Acoes__c.object-meta.xml
<CustomObject>
    <label>Ação</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Nome de Ações</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>