Multiset/force-app/main/default/objects/Acoes__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Moeda</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>