Multiset/force-app/main/default/objects/Acoes__c/fields/Low__c.field-meta.xml
<CustomField>
    <fullName>Low__c</fullName>
    <label>Minima</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>