Multiset/force-app/main/default/objects/Acoes__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Preço</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>