Multiset/force-app/main/default/objects/Acoes__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Código</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>