Multiset/force-app/main/default/objects/Acoes__c/fields/Ult_Atualizacao__c.field-meta.xml
<CustomField>
    <fullName>Ult_Atualizacao__c</fullName>
    <label>Ultima Atualização</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>